--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,275 @@
 </head>
 
 <body>
+  @@include('./html-blocks/svg-sprite.svg')
+  <header class="header pos-s">
+    <div class="df--js-sb--ai-c container">
+      <div class="logo">
+        <a href="#">
+          <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
+        </a>
+      </div>
+      <div class="df--js-sb--ai-c">
+        <button class="header-button violet">Получить каталог</button>
+        <button class="header-button blue">Получить прайс</button>
+        <button class="header-button corp-violet">Оставить завку</button>
+        <button class="fz-0">
+          <svg>
+            <use xlink:href="#phone-list"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="container mt-0-5">
+      <h1 class="visually-hidden">Акционные предложения на медецинские изделия</h1>
+      <img src="./img/temp-01.jpg" alt="">
+    </section>
 
+    <section class="about-us mt-1-5">
+      <div class="container">
+        <div class="about-us--container">
+          <div class="logo">
+            <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
+          </div>
+          <h2 class="mt-1">Ведущий производитель и&nbsp;дистрибьютер<br>медицинских изделий в&nbsp;Казахстане</h2>
+          <p class="mt-1">
+            На&nbsp;протяжении 25-ти лет мы&nbsp;обеспечиваем защиту врачей и&nbsp;пациентов, предотвращая
+            послеоперационные
+            осложнения и&nbsp;внутрибольничные инфекции. Исключаем репутационные риски и
+            заботимся о&nbsp;вашем бюджете, бесперебойно поставляя
+            одноразовые медицинские изделия.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <section class="our-production mt-1-5">
+    <h2 class="gradient padding white">Наша продукция</h2>
+    <div class="container">
+
+      <ul class="mt-1">
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+        <li>
+          <div class="our-production--photo df--ai-c">
+            <img src="./img/our-production-01.jpg" alt="">
+          </div>
+          <div class="our-production--description">
+            <h6>Операционные наборы</h6>
+            <p class="text">
+              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
+              от&nbsp;внутрибольничных
+              инфекций.
+            </p>
+            <p class="quantity">39 видов</p>
+          </div>
+        </li>
+
+      </ul>
+
+    </div>
+  </section>
+  <section class="offer mt-1-5">
+    <h3>Скидка 5% при первом заказе<br>Бесплатная доставка при первом заказе</h3>
+  </section>
+  <section class="advantages mt-1-5">
+    <h3>Сложности при заказе медицинских изделий</h3>
+    <ul>
+      <li>Маленький ассортимент продукции</li>
+      <li>Отсутствие или перегруженность складов</li>
+      <li>Отсутствие у поставщиков программ лояльности и гибкой системы скидок</li>
+      <li>Нет индивидуального подхода и учёта потребностей компании</li>
+    </ul>
+    <h3 class="mt-1">Преимущества работы с&nbsp;DOLCE PHARM</h3>
+    <ul>
+      <li>Экономия Вашего бюджета</li>
+      <li>Широкий ассортимент продукции и Международные стандарты качества</li>
+      <li>Эксклюзивные продукты на рынке медицинских изделий</li>
+      <li>Программа лояльности</li>
+      <li>Партнёрские программы</li>
+      <li>Наличие складских помещений</li>
+      <li>Защита от внутрибольничных и других инфекций</li>
+      <li>Гибкая система оплаты</li>
+      <li>Высокий уровень сервиса</li>
+      <li>Конфиденциальность</li>
+    </ul>
+
+  </section>
+  <section class="made-in-kaz mt-1-5">
+    <p>Наши изделия, медицинского назначения, производятся в&nbsp;Казахстане, с&nbsp;использованием передовых технологий
+      и&nbsp;высоких стандартов. Мы&nbsp;гордимся поддержкой отечественного производства, предоставляя надежные
+      и&nbsp;качественные продукты.</p>
+  </section>
+  <section class="reviews mt-1-5">
+    <h3>Отзывы наших клиентов</h3>
+  </section>
+  <footer class="footer"></footer>
 </body>
 
 </html>
