--- a/src/index.html
+++ b/src/index.html
@@ -56,191 +56,7 @@
   <section class="our-production mt-1-5">
     <h2 class="gradient padding white">Наша продукция</h2>
     <div class="container">
-
-      <ul class="mt-1">
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-        <li>
-          <div class="our-production--photo df--ai-c">
-            <img src="./img/our-production-01.jpg" alt="">
-          </div>
-          <div class="our-production--description">
-            <h6>Операционные наборы</h6>
-            <p class="text">
-              Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-              от&nbsp;внутрибольничных
-              инфекций.
-            </p>
-            <p class="quantity">39 видов</p>
-          </div>
-        </li>
-
-      </ul>
-
+      @@include('./html-blocks/our-production-list.html')
     </div>
   </section>
   <section class="offer mt-1-5">
@@ -277,7 +93,7 @@
   <section class="reviews mt-1-5">
     <h3>Отзывы наших клиентов</h3>
   </section>
-  <footer class="footer"></footer>
+  @@include('./html-blocks/footer.html')
 </body>
 
 </html>
