--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Main page</title>
+  @@include('./html-blocks/head.html')
 </head>
 
 <body>
@@ -78,26 +75,45 @@
   </section>
 
   <section class="advantages mt-1-5">
-    <h3>Сложности при заказе медицинских изделий</h3>
-    <ul>
-      <li>Маленький ассортимент продукции</li>
-      <li>Отсутствие или перегруженность складов</li>
-      <li>Отсутствие у поставщиков программ лояльности и гибкой системы скидок</li>
-      <li>Нет индивидуального подхода и учёта потребностей компании</li>
-    </ul>
-    <h3 class="mt-1">Преимущества работы с&nbsp;DOLCE PHARM</h3>
-    <ul>
-      <li>Экономия Вашего бюджета</li>
-      <li>Широкий ассортимент продукции и Международные стандарты качества</li>
-      <li>Эксклюзивные продукты на рынке медицинских изделий</li>
-      <li>Программа лояльности</li>
-      <li>Партнёрские программы</li>
-      <li>Наличие складских помещений</li>
-      <li>Защита от внутрибольничных и других инфекций</li>
-      <li>Гибкая система оплаты</li>
-      <li>Высокий уровень сервиса</li>
-      <li>Конфиденциальность</li>
-    </ul>
+    <div class="container padding">
+      <h3>Сложности при заказе медицинских изделий</h3>
+      <ul class="negatives m-0-a">
+        <li>
+          <span>1</span>
+          <p>Маленький ассортимент продукции</p>
+        </li>
+        <li>
+          <span>2</span>
+          <p>Отсутствие или перегруженность складов</p>
+        </li>
+        <li>
+          <span>3</span>
+          <p>Отсутствие у поставщиков программ лояльности и гибкой системы скидок</p>
+        </li>
+        <li>
+          <span>4</span>
+          <p>Нет индивидуального подхода и учёта потребностей компании</p>
+        </li>
+      </ul>
+    </div>
+
+    <div class="positive mt-1">
+      <div class="container padding">
+        <h3>Преимущества работы с&nbsp;DOLCE&nbsp;PHARM</h3>
+        <ul class="mt-0-75">
+          <li>Экономия Вашего бюджета</li>
+          <li>Широкий ассортимент продукции и Международные стандарты качества</li>
+          <li>Эксклюзивные продукты на рынке медицинских изделий</li>
+          <li>Программа лояльности</li>
+          <li>Партнёрские программы</li>
+          <li>Наличие складских помещений</li>
+          <li>Защита от внутрибольничных и других инфекций</li>
+          <li>Гибкая система оплаты</li>
+          <li>Высокий уровень сервиса</li>
+          <li>Конфиденциальность</li>
+        </ul>
+      </div>
+    </div>
 
   </section>
 
@@ -118,7 +134,10 @@
     <h3>Отзывы наших клиентов</h3>
   </section>
 
-  @@include('./html-blocks/footer.html')
+  <footer class="footer mt-1-5">
+    @@include('./html-blocks/footer.html')
+  </footer>
+
 </body>
 
 </html>
