--- a/src/html-blocks/footer.html
+++ b/src/html-blocks/footer.html
@@ -1,22 +1,37 @@
-<div class="container df--ai-c--jc-c">
-  <div class="image"></div>
+<div class="container">
+  <div class="image fz-0">
+    <svg>
+      <use xlink:href="#Dolce-pharm-line"></use>
+    </svg>
+  </div>
   <address>
     <p>
-      Адрес:<br>
+      <span>Адрес:</span><br>
       г. Алматы, Ауэзовский р-н,<br>
       ЖК Тау Самал, ул. Навои, 74.<br>
-      Телефон: +7 (777) 777 77 77
+      <span>Телефон:</span> +7 (777) 777 77 77
     </p>
     <p>
-      Отдел продаж:<br>
+      <span>Отдел продаж:</span><br>
       +7 (777) 777 77 77<br>
-      Отдел маркетинга:<br>
+      <span>Отдел маркетинга:</span><br>
       +7 (777) 777 77 77
     </p>
     <p>
-      Электронная почта:<br>
+      <span>Электронная почта:</span><br>
       dolce-pharma@dolce.kz
     </p>
   </address>
-  <div class="socials"></div>
+  <div class="socials">
+    <a class="mr-m">
+      <svg>
+        <use xlink:href="#wa-white"></use>
+      </svg>
+    </a>
+    <a>
+      <svg>
+        <use xlink:href="#ig-white"></use>
+      </svg>
+    </a>
+  </div>
 </div>
