--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -1,3 +1,17 @@
-<header class="header">
-
-</header>
+<div class="df--js-sb--ai-c container">
+  <div class="logo">
+    <a href="#">
+      <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
+    </a>
+  </div>
+  <div class="df--js-sb--ai-c">
+    <button class="header-button violet">Получить каталог</button>
+    <button class="header-button blue">Получить прайс</button>
+    <button class="header-button corp-violet">Оставить завку</button>
+    <button class="fz-0">
+      <svg>
+        <use xlink:href="#phone-list"></use>
+      </svg>
+    </button>
+  </div>
+</div>
