--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -1,17 +1,19 @@
-<div class="df--js-sb--ai-c container">
-  <div class="logo">
-    <a href="#">
-      <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
-    </a>
+<header class="header pos-s">
+  <div class="df--js-sb--ai-c container">
+    <div class="logo">
+      <a href="#">
+        <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
+      </a>
+    </div>
+    <div class="df--js-sb--ai-c">
+      <a class="button header-button violet" href="./files/Dolce-catalog.pdf" download>Скачать каталог</a>
+      <button class="button header-button blue">Получить прайс</button>
+      <button class="button header-button corp-violet">Оставить завку</button>
+      <button class="fz-0" title="Связаться с нами">
+        <svg>
+          <use xlink:href="#phone-list"></use>
+        </svg>
+      </button>
+    </div>
   </div>
-  <div class="df--js-sb--ai-c">
-    <button class="header-button violet">Получить каталог</button>
-    <button class="header-button blue">Получить прайс</button>
-    <button class="header-button corp-violet">Оставить завку</button>
-    <button class="fz-0">
-      <svg>
-        <use xlink:href="#phone-list"></use>
-      </svg>
-    </button>
-  </div>
-</div>
+</header>
