--- a/src/html-blocks/footer.html
+++ b/src/html-blocks/footer.html
@@ -1,37 +1,40 @@
-<div class="container">
-  <div class="image fz-0">
-    <svg>
-      <use xlink:href="#Dolce-pharm-line"></use>
-    </svg>
-  </div>
-  <address>
-    <p>
-      <span>Адрес:</span><br>
-      г. Алматы, Ауэзовский р-н,<br>
-      ЖК Тау Самал, ул. Навои, 74.<br>
-      <span>Телефон:</span> +7 (777) 777 77 77
-    </p>
-    <p>
-      <span>Отдел продаж:</span><br>
-      +7 (777) 777 77 77<br>
-      <span>Отдел маркетинга:</span><br>
-      +7 (777) 777 77 77
-    </p>
-    <p>
-      <span>Электронная почта:</span><br>
-      dolce-pharma@dolce.kz
-    </p>
-  </address>
-  <div class="socials">
-    <a class="mr-m">
+<footer class="footer mt-1-5">
+  <div class="container">
+    <div class="image fz-0">
       <svg>
-        <use xlink:href="#wa-white"></use>
+        <use xlink:href="#Dolce-pharm-line"></use>
       </svg>
-    </a>
-    <a>
-      <svg>
-        <use xlink:href="#ig-white"></use>
-      </svg>
-    </a>
+    </div>
+    <address>
+      <p>
+        <span>Адрес:</span><br>
+        г. Алматы, Ауэзовский р-н,<br>
+        ЖК Тау Самал, ул. Навои, 74.<br>
+        <span>Телефон:</span>
+        <a href="tel:+77711041201">+7 771 104 1201</a>
+      </p>
+      <p>
+        <span>Отдел продаж:</span><br>
+        <a href="tel:+77711041201">+7 771 104 1201</a><br>
+        <span>Отдел маркетинга:</span><br>
+        <a href="tel:+77711041201">+7 771 104 1201</a>
+      </p>
+      <p>
+        <span>Электронная почта:</span><br>
+        <a href="mailto:vmarketolog@dolcepharm.kz">vmarketolog@dolcepharm.kz</a>
+      </p>
+    </address>
+    <div class="socials">
+      <a class="mr-m" href="#">
+        <svg>
+          <use xlink:href="#wa-white"></use>
+        </svg>
+      </a>
+      <a href="#">
+        <svg>
+          <use xlink:href="#ig-white"></use>
+        </svg>
+      </a>
+    </div>
   </div>
-</div>
+</footer>
