--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,17 @@
     </section>
 
     <section class="about-us mt-1-5">
-      <div class="container">
-        <div class="about-us--container">
-          <div class="logo">
-            <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
-          </div>
-          <h2 class="mt-1">Ведущий производитель и&nbsp;дистрибьютер<br>медицинских изделий в&nbsp;Казахстане</h2>
-          <p class="mt-1">
+
+      <div class="about-us--title">
+        <div class="logo">
+          <img src="./img/logo-Dolce-Pharm.png" alt="Logo Dolce pharm">
+        </div>
+        <h2 class="mt-1">Ведущий производитель и&nbsp;дистрибьютер<br>медицинских изделий в&nbsp;Казахстане</h2>
+      </div>
+
+      <div class="about-us--descr mt-0-75">
+        <div class="container">
+          <p>
             На&nbsp;протяжении 25-ти лет мы&nbsp;обеспечиваем защиту врачей и&nbsp;пациентов, предотвращая
             послеоперационные
             осложнения и&nbsp;внутрибольничные инфекции. Исключаем репутационные риски и
@@ -59,7 +63,7 @@
   </section>
 
   <section class="advantages mt-1-5">
-    <div class="container padding">
+    <div class="container">
       <h3>Сложности при заказе медицинских изделий</h3>
       <ul class="negatives m-0-a">
         <li>
@@ -150,5 +154,6 @@
 
 
 </body>
+<!-- 576px 768px 992px 1200px -->
 
 </html>
