--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -6,8 +6,9 @@
       </a>
     </div>
     <div class="df--js-sb--ai-c header-buttons">
-      <a class="button header-button violet" href="./files/Dolce-catalog.pdf" download>Скачать каталог</a>
-      <button class="button header-button blue">Получить прайс</button>
+      <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" download>Скачать
+        каталог</a>
+      <button class="button header-button blue button-price">Получить прайс</button>
       <button class="button header-button corp-violet">Оставить завку</button>
       <button class="fz-0" title="Связаться с нами" id="js-modal-phone-button">
         <svg>
