--- a/src/html-blocks/our-production-list.html
+++ b/src/html-blocks/our-production-list.html
@@ -20,13 +20,13 @@
       <img src="./img/our-production-02.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Перчатки</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Широкий выбор перчаток, обеспечивающих защиту при диагностике, в&nbsp;операционной деятельности, при
+        использовании
+        химических веществ.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">43 вида</p>
     </div>
   </li>
 
@@ -35,13 +35,13 @@
       <img src="./img/our-production-03.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Комбинезоны</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Одноразовые защитные комбинезоны производятся из&nbsp;специального лёгкого нетканого полотна, предназначены для
+        защиты
+        кожного покрова, а&nbsp;также одежды.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -50,13 +50,11 @@
       <img src="./img/our-production-04.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Медицинские костюмы</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Медицинские костюмы одноразового применения из&nbsp;нетканых материалов с&nbsp;широкой размерной линейкой.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">10 видов</p>
     </div>
   </li>
 
@@ -65,13 +63,13 @@
       <img src="./img/our-production-05.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Маски медицинские</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Маски Dolce Pharm&nbsp;&mdash; это профессиональная защита от&nbsp;всех бактерий, инфекций и&nbsp;вирусов,
+        передающихся
+        воздушно-капельным путём.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">11 видов</p>
     </div>
   </li>
 
@@ -80,11 +78,9 @@
       <img src="./img/our-production-06.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Уголь активированный</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Эффективно адсорбирует токсины и&nbsp;очищает ваш организм.
       </p>
       <p class="quantity">39 видов</p>
     </div>
@@ -95,13 +91,11 @@
       <img src="./img/our-production-07.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Бахилы и шапочки</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Индивидуальные средства гигиены, для обеспечения высокого уровня санитарии в&nbsp;медицинских учреждениях.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">6 видов</p>
     </div>
   </li>
 
@@ -110,13 +104,11 @@
       <img src="./img/our-production-08.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Чехлы для операционных</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Для проведения простых и&nbsp;сложных операций, обеспечивающие защиту от&nbsp;внутрибольничных инфекций.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">1 вид</p>
     </div>
   </li>
 
@@ -125,13 +117,11 @@
       <img src="./img/our-production-09.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Простыни, подстилки и пеленки</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Различных размеров и&nbsp;плотности, обеспечивающие защиту и&nbsp;комфорт.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">67 видов</p>
     </div>
   </li>
 
@@ -140,13 +130,11 @@
       <img src="./img/our-production-10.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Контейнеры для анализов</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Используются для транспортировки биоматериала на&nbsp;исследования.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -155,13 +143,11 @@
       <img src="./img/our-production-11.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Гинекологические инструменты</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Предназначены для диагностических и&nbsp;хирургических целей.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">2 вида</p>
     </div>
   </li>
 
@@ -170,13 +156,13 @@
       <img src="./img/our-production-12.jpg" alt="">
     </div>
     <div class="our-production--description">
-      <h6>Операционные наборы</h6>
+      <h6>Шприцы</h6>
       <p class="text">
-        Операционные наборы для проведения простых и&nbsp;сложных операций, обеспечивающие защиту
-        от&nbsp;внутрибольничных
-        инфекций.
+        Изготовлены из&nbsp;полипропилена, медицинского назначения с&nbsp;манжетом из&nbsp;нетоксичного натурального
+        каучука
+        в&nbsp;блистерной упаковке.
       </p>
-      <p class="quantity">39 видов</p>
+      <p class="quantity">4 вида</p>
     </div>
   </li>
 
