--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
     <div class="container">
       @@include('./html-blocks/our-production-list.html')
       <div class="mt-1 df--ai-c--jc-c">
-        <button class="button violet mr-m">Скачать каталог</button>
-        <button class="button blue">Получить прайс</button>
+        <a class="button violet mr-m" href="./files/Dolce-catalog.pdf" download>Скачать каталог</a>
+        <a class="button blue">Получить прайс</a>
       </div>
     </div>
   </section>
@@ -88,14 +88,14 @@
     <div class="positive mt-1">
       <div class="container padding">
         <h3>Преимущества работы с&nbsp;DOLCE&nbsp;PHARM</h3>
-        <ul class="mt-1">
+        <ul class="mt-0-75">
           <li>Экономия Вашего бюджета</li>
-          <li>Широкий ассортимент продукции и Международные стандарты качества</li>
-          <li>Эксклюзивные продукты на рынке медицинских изделий</li>
+          <li>Широкий ассортимент продукции и&nbsp;Международные стандарты качества</li>
+          <li>Эксклюзивные продукты на&nbsp;рынке медицинских изделий</li>
           <li>Программа лояльности</li>
           <li>Партнёрские программы</li>
           <li>Наличие складских помещений</li>
-          <li>Защита от внутрибольничных и других инфекций</li>
+          <li>Защита от внутрибольничных и&nbsp;других инфекций</li>
           <li>Гибкая система оплаты</li>
           <li>Высокий уровень сервиса</li>
           <li>Конфиденциальность</li>
@@ -106,9 +106,10 @@
   </section>
 
   <section class="made-in-kaz mt-1-5">
-    <div class="container df--ai-c">
+    <div class="container made-in-kaz-wrapper">
       <div class="image">
-        <img src="./img/M-in-K.png" alt="Made in Kazakhstan">
+        <img class="image-v" src="./img/M-in-K.png" alt="Made in Kazakhstan" loading="lazy">
+        <img class="image-h" src="./img/M-in-K-h.png" alt="Made in Kazakhstan" loading="lazy">
       </div>
       <p class="text">Наши изделия, медицинского назначения, производятся в&nbsp;Казахстане, с&nbsp;использованием
         передовых
