--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,19 @@
   <main>
     <section class="baner mt-0-25">
       <h1 class="visually-hidden">Акционные предложения на медецинские изделия</h1>
-      <img src="./img/temp-01.jpg" alt="">
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./img/temp-01.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./img/temp-01.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./img/temp-01.jpg" alt="">
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="about-us mt-1-5">
@@ -50,7 +62,7 @@
     </div>
   </section>
 
-  <section class="offer mt-1-5 gradient">
+  <section class="offer mt-1-5 gradient pos-r">
     <div class="container df--js-sb--ai-c">
       <div class="offer--text">
         <h3>Скидка 5% при первом заказе<br>Бесплатная доставка при первом заказе</h3>
