--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -6,9 +6,9 @@
       </a>
     </div>
     <div class="df--js-sb--ai-c header-buttons">
-      <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" download>Скачать
+      <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf">Скачать
         каталог</a>
-      <button class="button header-button blue button-price">Получить прайс</button>
+      <button class="button header-button blue button-price js-modal-request-buttons">Получить прайс</button>
       <button class="button header-button corp-violet">Оставить завку</button>
       <button class="fz-0" title="Связаться с нами" id="js-modal-phone-button">
         <svg>
