--- a/src/html-blocks/header.html
+++ b/src/html-blocks/header.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="df--js-sb--ai-c header-buttons">
-      <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf">Скачать
+      <a class="button header-button violet button-download" href="./files/Dolce-catalog.pdf" target="_blank">Скачать
         каталог</a>
       <button class="button header-button blue button-price js-modal-request-buttons">Получить прайс</button>
       <button class="button header-button corp-violet">Оставить завку</button>
